Adding test content for viewing

--- a/board-of-directors.html
+++ b/board-of-directors.html
@@ -25,7 +25,7 @@
           <span></span>
           <a href="explore.html">Explore</a>
           <ul>
-            <li><a href="lights-spectacular.html">Lights Spectacular</a></li>
+            <li><a href="lights-spectacular.html">Light Spectacular</a></li>
             <li><a href="christmas-village.html">Christmas Village</a></li>
           </ul>
         </li>
@@ -36,8 +36,8 @@
           <span></span>
           <ul>
             <li><a href="mission.html">Mission & Vision</a></li>
-            <li><a href="board-of-directors.html">Board of Directors</a></li>
-            <li><a href="management-team.html">Management Team</a></li>
+            <li><a href="board-of-directors.html">Management Team</a></li>
+
           </ul>
         </li>
         <li><a href="sponsors.html">Sponsors</a></li>
@@ -70,7 +70,7 @@
           <ul class="text-center main-menu">
             <li class="hide-for-small-only"><a href="explore.html">EXPLORE</a>
               <ul>
-                <li><a href="lights-spectacular.html">Lights Spectacular</a>
+                <li><a href="lights-spectacular.html">Light Spectacular</a>
                 </li>
                 <li><a href="christmas-village.html">Christmas Village</a></li>
               </ul>
@@ -127,50 +127,40 @@
         </div>
       </header>
       <div class="content">
-        <h1 class="text-center">Board of Directors</h1><br/>
+        <h1 class="text-center">Management Team</h1><br/>
         <div class="small-8 small-push-2 text-center columns ">
-          <h3 class="condensed">Dee Dee Montgomery, President</h3>
-          <h3 class="condensed">John Snow, Vice President</h3>
-          <h3 class="condensed">Josh Grapski, Treasurer</h3>
-          <h3 class="condensed">Brittany Danahy, Secretary</h3>
-          <h3 class="condensed">Amy Mault, Director</h3>
-<br/>
+          <h4>Peter Briccotto</h4><p><strong>Producer</strong></p>
+
+          <h4>Steve McLarren</h4><p><strong> Marketing Director</strong></p>
+
+          <h4>Stefanie Roselle</h4><p><strong> Social Media Director</strong></p>
+
+          <h4> John Brandano - Brandano Displays</h4><p><strong> Light Spectacular Director</strong></p>
+          <h4> Scott Inners - Majestic Midways</h4><p><strong> Carnival Operator</strong></p>
+
+          <h4>Kathy MacDonald</h4><p><strong> Light Spectacular Coordinator</strong></p>
+          <h4> Wayne & Barb Kursh - Races2Run</h4><p><strong> Dashing Through the Show Directors</strong></p>
+          <h4> Alyssa Titus</h4><p><strong> Santa's Workshop Coordinator</strong></p>
+          <h4>  Hank Rosenberg</h4><p><strong> the Giving Tree Coordinator</strong></p>
+          <h4> Dana Ferrari</h4><p><strong> Community Relations Coordinator</strong></p>
+
+          <h4>  Pat Cooper</h4><p><strong> Delaware State Parks Coordinator</strong></p>
+          <h4> Caroline Foltz</h4><p><strong> Delaware State Parks Coordinator</strong></p>
+          <h4> Steve Savidge</h4><p><strong> Delaware State Parks Coordinator</strong></p></strong></strong></p>
+
+          <h5><strong>
+          Thank you to the additional many folks helping to make <br/>this event a success from the Delaware State Parks!
+          </strong></h5><p></p>
+
+          <h4>Mike Porch</h4> <p><strong>Cape May Lewes Ferry Coordinator</strong></p><br/>
+            <h4>John Armstrong</h4><p><strong> Cape May Lewes Ferry Coordinator</strong></p><br/>
+              <h4>Ingrid Dellatore</h4><p><strong> Cape May Lewes Ferry Coordinator</strong></p>
+          <strong>
+          Thank you to the additional many folks helping to make this event a success from the Cape May Lewes Ferry!
+          <br/>
 <p>Email <a class="red" href="mailto:info@festivalofcheer.org">info@festivalofcheer.org</a> to contact any of our Board Members. </p>
         </div>
         <div class="row">
-          <div data-equalizer>
-            <div class="small-12 large-6 columns">
-              <div data-equalizer-watch class="callout-red">
-
-                <div class="row">
-                  <div class="small-6 columns tickets">
-                    <a href="#"><h4>Get Your
-                      Tickets</h4></a>
-                    <p>Tickets are on sale now! Grab your tickets in advance for the best price - first come first serve.</p>
-
-                  </div>
-                  <div class="small-6 columns tickets"><a href="#" class="tickets">
-                    <img src="img/ticket.svg"/></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="small-12 large-6 columns">
-              <div data-equalizer-watch class=" callout-red get-here">
-                <div class="small-6">
-                  <a
-                      href="https://www.google.com/maps/place/Cape+May+-+Lewes+Ferry,+Lewes,+DE+19958/@38.903357,-75.8171152,10z/data=!4m5!3m4!1s0x89b8adc7bcf3aff5:0x77f6f7f7a5b806ac!8m2!3d38.7825573!4d-75.1194678"
-                      target="_blank"><h4>Get Here</h4></a>
-                  <p>The events will take place at Cape Henlopen State Park and the Cape May-Lewes Ferry in Lewes, Delaware!</p></div>
-                <div><a
-                    href="https://www.google.com/maps/place/Cape+May+-+Lewes+Ferry,+Lewes,+DE+19958/@38.903357,-75.8171152,10z/data=!4m5!3m4!1s0x89b8adc7bcf3aff5:0x77f6f7f7a5b806ac!8m2!3d38.7825573!4d-75.1194678"
-                    target="_blank"><img
-                    src="img/map.png"/></a>
-
-                </div>
-              </div>
-            </div>
-          </div>
 
         </div>
         <br/>
