--- a/christmas-village.html
+++ b/christmas-village.html
@@ -36,8 +36,8 @@
           <span></span>
           <ul>
             <li><a href="mission.html">Mission & Vision</a></li>
-            <li><a href="board-of-directors.html">Board of Directors</a></li>
-            <li><a href="management-team.html">Management Team</a></li>
+            <li><a href="board-of-directors.html">Management Team</a></li>
+
           </ul>
         </li>
         <li><a href="sponsors.html">Sponsors</a></li>
