--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
           <span></span>
           <a href="explore.html">Explore</a>
           <ul>
-            <li><a href="lights-spectacular.html">Lights Spectacular</a></li>
+            <li><a href="lights-spectacular.html">Light Spectacular</a></li>
             <li><a href="christmas-village.html">Christmas Village</a></li>
           </ul>
         </li>
@@ -36,8 +36,8 @@
           <span></span>
           <ul>
             <li><a href="mission.html">Mission & Vision</a></li>
-            <li><a href="board-of-directors.html">Board of Directors</a></li>
-            <li><a href="management-team.html">Management Team</a></li>
+            <li><a href="board-of-directors.html">Management Team</a></li>
+
           </ul>
         </li>
         <li><a href="sponsors.html">Sponsors</a></li>
@@ -70,7 +70,7 @@
           <ul class="text-center main-menu">
             <li class="hide-for-small-only"><a href="explore.html">EXPLORE</a>
               <ul>
-                <li><a href="lights-spectacular.html">Lights Spectacular</a>
+                <li><a href="lights-spectacular.html">Light Spectacular</a>
                 </li>
                 <li><a href="christmas-village.html">Christmas Village</a></li>
               </ul>
@@ -127,7 +127,7 @@
         </div>
       </header>
       <div class="content">
-        <h1 class="text-center">Board of Directors</h1><br/>
+        <h1 class="text-center">Management Team</h1><br/>
         <div class="small-8 small-push-2 text-center columns ">
           <h3 class="condensed">Dee Dee Montgomery, President</h3>
           <h3 class="condensed">John Snow, Vice President</h3>
