--- a/sponsors.html
+++ b/sponsors.html
@@ -25,7 +25,7 @@
           <span></span>
           <a href="explore.html">Explore</a>
           <ul>
-            <li><a href="lights-spectacular.html">Lights Spectacular</a></li>
+            <li><a href="lights-spectacular.html">Light Spectacular</a></li>
             <li><a href="christmas-village.html">Christmas Village</a></li>
           </ul>
         </li>
@@ -36,8 +36,8 @@
           <span></span>
           <ul>
             <li><a href="mission.html">Mission & Vision</a></li>
-            <li><a href="board-of-directors.html">Board of Directors</a></li>
-            <li><a href="management-team.html">Management Team</a></li>
+            <li><a href="board-of-directors.html">Management Team</a></li>
+
           </ul>
         </li>
         <li><a href="sponsors.html">Sponsors</a></li>
@@ -65,7 +65,7 @@
           <ul class="text-center main-menu">
             <li class="hide-for-small-only"><a href="explore.html">EXPLORE</a>
               <ul>
-                <li><a href="lights-spectacular.html">Lights Spectacular</a></li>
+                <li><a href="lights-spectacular.html">Light Spectacular</a></li>
                 <li><a href="christmas-village.html">Christmas Village</a></li>
               </ul>
             </li>
