Adding test content for viewing

--- a/explore.html
+++ b/explore.html
@@ -126,52 +126,60 @@
           </div>
         </div>
       </header>
-      <div class="callout-row dark-blue">
-        <div class="row pre-content callout-row ">
-          <div
-              class="small-12  columns text-center about-wonderfest">
-            <h3>About the Winter WonderFest</h3>
-            <p>Winter WonderFEST is proudly produced by a newly established
-              nonprofit
-              organization, Festival of Cheer, Inc. Our organization has created
-              this
-              festival to provide greater cultural activities for families to
-              enjoy
-              during the holiday season. Most importantly, Winter WonderFEST
-              will
-              provide critically needed funding to the various nonprofits that
-              serve
-              the
-              residents and visitors of Sussex County, Delaware.</p></div>
-        </div>
-      </div>
-      <div class="content">
+      <div class="">
         <div class="row">
-          <ul class="tabs" data-tabs id="example-tabs">
-            <li class="tabs-title is-active"><a href="#panel1"
-                                                aria-selected="true">Tab 1</a>
-            </li>
-            <li class="tabs-title"><a href="#panel2">Tab 2</a></li>
-          </ul>
-          <div class="tabs-content" data-tabs-content="example-tabs">
-            <div class="tabs-panel is-active" id="panel1">
-              <div class="small-12 columns medium-8">
-                <h2>This is a headline</h2>
-                <p>Tickets are on sale now! Grab your tickets in advance for the best price - first come first serve.</p>
+          <div class="row lights-carnival">
+            <div class="small-10 small-push-1 large-8 large-push-2">
+              <a href="lights-spectacular.html" class="red">
+                <div
+                    class="callout lights small-12 medium-6 columns">
+                  <h2>Lights</h2>
+                  <p>
+                    <small>Take your family through a dazzling light show from the
+                      comfort of your car!<br/>Over 60 magnificent holiday light displays are ready to welcome you!
+                    </small>
+                  </p>
+
+                </div>
+              </a>
+              <a href="christmas-village.html" class="red">
+                <div
+                    class="callout village small-12 medium-6 columns">
+                  <h2>Village</h2>
+                  <p>
+                    <small>Carnival Rides, Ice Skating, Santa's Workshop, the Giving
+                      Tree, and more are waiting for you at our Christmas Village at
+                      the Cape May Lewes Ferry Grounds!
+                    </small>
+                  </p>
+
+                </div>
+              </a>
+              <a href="donate.html" class="red">
+                <div
+                    class="callout volunteer small-12 medium-6 columns">
+                  <h2>The Giving Tree</h2>
+                  <p>
+                    <small>Make a tax deductible donation today to support our Festival of Cheer Fund.
+                    </small>
+                  </p>
+              </a>
+
+            </div>
+            <a href="local-happenings.html" class="red">
+              <div
+                  class="callout donate small-12 medium-6 columns end">
+                <h2>Local Happenings</h2>
+                <p>
+                  <small>Help create a brighter future for Sussex County! Donate
+                    TODAY!
+                  </small>
                 </p>
+
               </div>
-              <div class="small-12 columns medium-4">
-                <img
-                    src="https://placeholdit.imgix.net/~text?txtsize=33&txt=IMAGE&w=500&h=350"/>
-              </div>
-            </div>
-            <div class="tabs-panel" id="panel2">
-              <p>Suspendisse dictum feugiat nisl ut dapibus. Vivamus hendrerit
-                arcu sed erat molestie vehicula. Ut in nulla enim. Phasellus
-                molestie magna non est bibendum non venenatis nisl tempor. Sed
-                auctor neque eu tellus rhoncus ut eleifend nibh porttitor.</p>
-            </div>
+            </a>
           </div>
+
           <div data-equalizer>
             <div class="small-12 large-6 columns">
               <div data-equalizer-watch class="callout-red">
