--- a/about-us.html
+++ b/about-us.html
@@ -154,9 +154,11 @@
           <h5 class="condensed">For more information about our organization, please reach out to
             us!</h5>
 
-          <p><a class="button left alert small-4 columns" href="#"><strong>302.727.0221</strong></a><a class="button alert small-4 columns end" href="#"><strong>info@festivalofcheer.org</strong></a></p>
-        </div>
+          <div class="row"><a class="button left alert  small-6 medium-3" href="#"><strong>302.727.0221</strong></a>
+          </div>
+          <p><a class="button alert small-6 medium-3" href="#"><strong>info@festivalofcheer.org</strong></a></p>
 
+        </div>
         <footer>
           <div class="row">
             <div
