Adding test content for viewing

--- a/board-of-directors.html
+++ b/board-of-directors.html
@@ -134,7 +134,7 @@
           <h4>Steve McLarren</h4><p><strong> Marketing Director</strong></p>
 
           <h4>Stefanie Roselle</h4><p><strong> Social Media Director</strong></p>
-
+<h4>Stephanie Cameron</h4><p><strong>Accounting</strong></p>
           <h4> John Brandano - Brandano Displays</h4><p><strong> Light Spectacular Director</strong></p>
           <h4> Scott Inners - Majestic Midways</h4><p><strong> Carnival Operator</strong></p>
 
@@ -156,7 +156,8 @@
             <h4>John Armstrong</h4><p><strong> Cape May Lewes Ferry Coordinator</strong></p><br/>
               <h4>Ingrid Dellatore</h4><p><strong> Cape May Lewes Ferry Coordinator</strong></p>
           <strong>
-          Thank you to the additional many folks helping to make this event a success from the Cape May Lewes Ferry!
+            <h5><strong>
+          Thank you to the additional many folks helping to make<br/> this event a success from the Cape May Lewes Ferry!</strong></h5>
           <br/>
 <p>Email <a class="red" href="mailto:info@festivalofcheer.org">info@festivalofcheer.org</a> to contact any of our Board Members. </p>
         </div>
