--- a/mission.html
+++ b/mission.html
@@ -128,7 +128,7 @@
       </header>
       <div class="content">
         <h1 class="text-center">Mission and Vision</h1>
-        <div class="small-10 small-push-1  columns ">
+        <div class="small-8 small-push-2  columns ">
           <p>Festival of Cheer, the non-profit producing organization of Winter
             WonderFEST, was formed by community leaders with the mission to
             enrich lives by creating cultural events and health related
@@ -147,7 +147,14 @@
             family-friendly events while reinvesting the proceeds from these
             events directly into the non-profits that strengthen our
             community. </p>
-
+          <h3 class="red condensed text-center">Board</h3>
+<p class="text-center">
+  <strong>Dee Dee Montgomery</strong><br/> President<br/>
+  <strong>John Snow</strong><br/> Vice President<br/>
+  <strong>Josh Grapski</strong><br/> Treasurer<br/>
+  <strong>Brittany Danahy</strong><br/> Secretary<br/>
+  <strong>Amy Mault</strong><br/> Board Member<br/>
+</p>
 
         </div>
         <div class="row">
