--- a/sponsors.html
+++ b/sponsors.html
@@ -118,9 +118,9 @@
         <div class="small-12  columns text-center ">
           <h1>Our Sponsors</h1>
           <p>Winter Wonderfest is proudly sponsored by:</p>
-          <div class="presenting sponsors small-up-3 text-center">
+          <div class="presenting sponsors small-up-2 text-center">
           <h2>Presenting</h2>
-            <div class="column"><a href="http://www.bigchillsurfcantina.com/" target="_blank" title="Big Chill Surft Cantina"><img src="img/sponsors/big-chill.jpg"  alt="Big Chill Surft Cantina"></a></div>
+            <!--<div class="column"><a href="http://www.bigchillsurfcantina.com/" target="_blank" title="Big Chill Surft Cantina"><img src="img/sponsors/big-chill.jpg"  alt="Big Chill Surft Cantina"></a></div>-->
             <div class="column"><img src="img/sponsors/la-vida.jpeg"  alt="La Vida Hospitality"></div>
             <div class="column"><a href="http://schellbrothers.com/" title="Schell Brothers" target="blank"><img src="img/sponsors/schell-bros.jpg"  alt="Schell Brothers"></a></div>
           </div>
