--- a/support.html
+++ b/support.html
@@ -130,29 +130,10 @@
         <h1 class="text-center">Help Us Support!</h1><br/>
         <div class="text-center"><img src="img/foodbank-logo.png" /></div>
         <div class="small-8 small-push-2 text-center columns ">
-          <p>        <h4 class="black text-center condensed">We will be collecting nonperishable food items each night at the Light Spectacular Gates!</h4>
+          <p>        <h4 class="black text-center condensed">We will be collecting nonperishable food items<br/> each night at the Light Spectacular Gates!</h4>
           </p>
 
-          <div class="callout small-8 columns small-push-2 end"><h3
-              class="condensed black">Tickets</h3><br/>
-            <h6 class="condensed black">Car Passes (1 - 7 Passengers)</h6>
-            <p>$15 in Advance/$20 at the Gate</p>
-            <hr/>
-            <h6 class="condensed black">Van or "Party Bus" Passes (8 - 20
-              Passengers)</h6>
-            <p>$15 in Advance/$20 at the Gate</p>
-            <hr/>
-            <h6 class="condensed black">School Bus or Charter Bus (21 - 55
-              Passengers)</h6>
-            <p>$50 in Advance/$60 at the Gate</p>
-            <hr/>
-            <div class="small-6 columns"><img src="img/light-spectacular-1.jpg" /></div>
-            <div class="small-6 columns"><img src="img/light-spectacular-2.jpg" /></div>
-          </div>
-          <hr/>
-          <h4 class="condensed black">
-            Volunteers are Still Needed!
-          </h4>
+
           <p>
             <a class="red"href="http://www.signupgenius.com/go/4090f44a9af2faaff2-winter" target="_blank"><strong>Come join all the FUN and make Winter WonderFEST happen!
             </strong></a></p>
